# ComputerClubSimulator

./: .gitignore  CMakeLists.txt  README.md
examples/: bad_example.txt  force_gone_all_example.txt  long_queue.txt  wrong_parameters_cnt.txt
examples/bad_cost/: letters.txt  mix.txt  negative.txt  two_values.txt  zero.txt
examples/bad_event/: bad_time.txt  big_table.txt  big_type.txt  negative_table.txt  negative_type.txt  zero_table.txt  zero_type.txt
examples/bad_format/: little_args_1.txt  little_args_2.txt  little_args_3.txt  little_args_4.txt  many_args_1.txt  many_args_2.txt  many_args_3.txt  one_time.txt  swap_time.txt
examples/bad_names/: capital.txt  cyrillic.txt  star.txt  two_values.txt
examples/bad_tables/: letters.txt  mix.txt  negative.txt  two_values.txt  zero.txt
examples/bad_values/: header_time.txt  swap_header_time.txt  table.txt  three_time_header.txt  time.txt  type.txt
include/: clientQueue.h  club.h  clubLogger.h  event.h  incomeEvent.h  parser.h  person.h  table.h  timeConvertion.h
src/: clientQueue.cpp  club.cpp  clubLogger.cpp  event.cpp  incomeEvent.cpp  main.cpp  parser.cpp  person.cpp  table.cpp  timeConvertion.cpp
test/: test.cpp
